Fixed overlapping text on service page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1670,7 +1670,7 @@ a.navbar-brand img {
   float: left;
 }
 .service-title p{
-	font-size: 4vh;
+	font-size: 3vh;
 	color: white;
 	display: flex;
     justify-content: center;
